--- a/patient-service/src/main/resources/application.properties
+++ b/patient-service/src/main/resources/application.properties
@@ -1,15 +1,49 @@
 spring.application.name=patient-service
 
-spring.h2.console.path=/h2-console
-spring.datasourse.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-
-spring.datasource.username=root
-spring.datasource.password=root
-
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
 
 server.port=4000
+
+
+
+
+
+
+# ===============================
+# DATABASE CONFIGURATION (MySQL)
+# ===============================
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ===============================
+# JPA / HIBERNATE CONFIGURATION
+# ===============================
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# ===============================
+# SERVER CONFIGURATION
+# ===============================
+
+
+# ===============================
+# JWT CONFIGURATION
+# ===============================
+
+
+
+# To this:
+springdoc.swagger-ui.path=/swagger-ui/index.html
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+logging.level.org.springframework.transaction.interceptor=TRACE
+logging.level.org.springframework.orm.jpa=TRACE
+
+
+
+logging.level.root=info
